--- a/terminal/login.html
+++ b/terminal/login.html
@@ -132,7 +132,7 @@ body::before {
 
         if (ValidUsername === true && ValidPassword === true) {
             $('.valid').css('display', 'block');
-            location.replace("https://s.codepen.io/toto-bird/debug/qLrVYZ/WPMLYNObmNVr");
+            location.replace("https://totobird.cf/terminal/authuser=true");
         } else {
             var ValidUsername = $('#username').val() === 'gnet27';
             var ValidPassword = $('#password').val() === 'kiwiBird';
