--- a/mc.html
+++ b/mc.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en" >
 
@@ -25,6 +23,7 @@
 body {
   padding-top: 50px;
   padding-bottom: 20px;
+  background-image: url("https://totobird.cf/sources/mcscene.jpg");
 }
 
 .faint {
@@ -479,4 +478,3 @@ function dwld3() {
 </body>
 
 </html>
- 
