--- a/mc.html
+++ b/mc.html
@@ -23,7 +23,6 @@
 body {
   padding-top: 50px;
   padding-bottom: 20px;
-  background-image: url("https://totobird.cf/sources/mcscene.jpg");
 }
 
 .faint {
@@ -277,7 +276,7 @@ body {
 
 </head>
 
-<body translate="no" >
+<body translate="no" bgimage: url("https://totobird.cf/sources/mcscene.jpg")>
 
   <body>
 <p align="center"><font size="+5">Conure_Steve Maps</font><br><font size="+3">For Minecraft</font></p>
