--- a/mc.html
+++ b/mc.html
@@ -289,7 +289,7 @@ body {
           <div class="card">
             <div class="front">
               <div class="cover">
-                <img src="https://bilbo.surge.sh/codepen/download-cards/apple.png" />
+                <img src="https://totobird.cf/sources/unfairDon'tTakeDamageScene.png" />
               </div>
               <div class="branded">
                 <!--span class="fa fa-apple"></span-->
