--- a/mc.html
+++ b/mc.html
@@ -23,6 +23,11 @@
 body {
   padding-top: 50px;
   padding-bottom: 20px;
+  background: url("https://totobird.cf/sources/mcscene.jpg") no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 .faint {
