--- a/mc.html
+++ b/mc.html
@@ -473,7 +473,7 @@ function dwld3() {
   location.replace(download3);
 };
 
-function dwld1() {
+function view1() {
   location.replace("https://totobird.cf/sources/unfairDontTakeDamageScene.png");
     </script>
 
