--- a/mc.html
+++ b/mc.html
@@ -305,7 +305,7 @@ body {
                 <div class="main">
                   <h3 class="use-for faint">Download</h3>
                   <button type="button" class="btn btn-default btn-block btn-download" onclick="dwld1()">Don't Take Damage</button>
-                  <button type="button" class="btn btn-default btn-block btn-download" onclick="view1()">Veiw Screenshot</button>
+                  <button type="button" onclick="view1()">Veiw Screenshot</button>
                 </div>
                 <div class="footer">
                   <button class="btn btn-flip btn-qr" onclick="rotateCard(this)">
