--- a/mc.html
+++ b/mc.html
@@ -90,7 +90,7 @@ body {
   border-radius: 4px;
   margin-bottom: 30px;
   width: 100%;
-  height: 420px;
+  height: 440px;
 }
 .card-container:not(.manual-flip):hover .front {
   -moz-transform: rotateY(180deg);
@@ -305,7 +305,7 @@ body {
                 <div class="main">
                   <h3 class="use-for faint">Download</h3>
                   <button type="button" class="btn btn-default btn-block btn-download" onclick="dwld1()">Don't Take Damage</button>
-                  <button type="button" onclick="view1()">Veiw Screenshot</button>
+                  <button type="button" class="btn btn-default btn-block btn-download" onclick="view1()">View Screenshot</button>
                 </div>
                 <div class="footer">
                   <button class="btn btn-flip btn-qr" onclick="rotateCard(this)">
@@ -475,6 +475,7 @@ function dwld3() {
 
 function view1() {
   location.replace("https://totobird.cf/sources/unfairDontTakeDamageScene.png");
+};
     </script>
 
 
