--- a/mc.html
+++ b/mc.html
@@ -474,7 +474,7 @@ function dwld3() {
 };
 
 function view1() {
-  location.replace("https://totobird.cf/sources/unfairDontTakeDamageScene.png");
+  location.replace("https://totobird.cf/sources/unfairDon'tTakeDamageScene.png");
 };
     </script>
 
