--- a/mc.html
+++ b/mc.html
@@ -285,6 +285,7 @@ body {
 
   <body>
 <p align="center"><font size="+5">Conure_Steve Maps</font><br><font size="+3">For Minecraft</font></p>
+<button type="button" class="btn btn-default btn-block btn-download" onclick="dwldRP()">Download Resource Pack</button>
 <div class="container">
   <div class="row">
     <section class="card-holder">
@@ -472,8 +473,8 @@ function dwld3() {
   location.replace(download3);
 };
 
-function view1() {
-  location.replace("https://totobird.cf/sources/unfairDon'tTakeDamageScene.png");
+function dwldRP() {
+  location.replace("https://totobird.cf/sources/");
 };
     </script>
 
