--- a/mc.html
+++ b/mc.html
@@ -474,7 +474,7 @@ function dwld3() {
 };
 
 function dwldRP() {
-  location.replace("https://totobird.cf/sources/");
+  location.replace("https://drive.google.com/file/d/1uVTOctZk41S5m_k2iAl3RyyKUlNLpaMq/view?usp=sharing");
 };
     </script>
 
