--- a/terminal/authuser=true.html
+++ b/terminal/authuser=true.html
@@ -4,8 +4,8 @@
 <head>
 
   <meta charset="UTF-8">
-  <link rel="shortcut icon" type="image/x-icon" href="http://icons.iconarchive.com/icons/alecive/flatwoken/512/Apps-Terminal-Pc-104-icon.png" />
-  <link rel="mask-icon" type="" href="http://icons.iconarchive.com/icons/alecive/flatwoken/512/Apps-Terminal-Pc-104-icon.png" color="#111" />
+  <!--link rel="shortcut icon" type="image/x-icon" href="http://icons.iconarchive.com/icons/alecive/flatwoken/512/Apps-Terminal-Pc-104-icon.png" />
+  <link rel="mask-icon" type="" href="http://icons.iconarchive.com/icons/alecive/flatwoken/512/Apps-Terminal-Pc-104-icon.png" color="#111" /-->
   <title>Totobird Terminal - Admin</title>
   
   
