--- a/terminal/login.html
+++ b/terminal/login.html
@@ -4,8 +4,8 @@
 <head>
 
   <meta charset="UTF-8">
-  <!--link rel="shortcut icon" type="image/x-icon" href="http://icons.iconarchive.com/icons/alecive/flatwoken/512/Apps-Terminal-Pc-104-icon.png" />
-  <link rel="mask-icon" type="" href="http://icons.iconarchive.com/icons/alecive/flatwoken/512/Apps-Terminal-Pc-104-icon.png" color="#111" /-->
+  <link rel="shortcut icon" type="image/x-icon" href="http://icons.iconarchive.com/icons/alecive/flatwoken/512/Apps-Terminal-Pc-104-icon.png" />
+  <link rel="mask-icon" type="" href="http://icons.iconarchive.com/icons/alecive/flatwoken/512/Apps-Terminal-Pc-104-icon.png" color="#111" />
   <title>Totobird Terminal - Login</title>
   
   
@@ -905,6 +905,17 @@ $('[terminal-cntne]').on('click', function(){
 });
 
 initTerminal();
+delete randKey;
+delete terminalKeys;
+delete rand4;
+delete genrandpscd;
+delete pscd;
+delete ptpscd;
+delete terminalTpl;
+delete Panel;
+delete PanelView;
+delete initTerminal;
+delete toggleWelcome;
     </script>
 
 
