--- a/terminal/login.html
+++ b/terminal/login.html
@@ -910,7 +910,7 @@ delete terminalKeys;
 delete rand4;
 delete genrandpscd;
 delete pscd;
-delete ptpscd;
+ptpscd = ptpscd[0]+ptpscd[1]+ptpscd[2]+ptpscd[3]+"_zone "+ptpscd[4]+ptpscd[5]+": version."+ptpscd[6]+ptpscd[7]
 delete terminalTpl;
 delete Panel;
 delete PanelView;
