--- a/terminal/login.html
+++ b/terminal/login.html
@@ -910,7 +910,7 @@ delete terminalKeys;
 delete rand4;
 delete genrandpscd;
 delete pscd;
-version = version[0]+version[1]+version[2]+version[3]+"_zone "+version[4]+version[5]+": version."+version[6]+version[7]
+delete version[0]+version[1]+version[2]+version[3]+"_zone "+version[4]+version[5]+": version."+version[6]+version[7]
 delete terminalTpl;
 delete Panel;
 delete PanelView;
